crates/solidity/testing/snapshots/bindings_output/contracts/constructor_invocation/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[ input.sol:4:16 ]
   │
 4 │     constructor(int _x) {}
   │                ──────┬─────  
   │                      ╰─────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ contract A {
   │          ┬  
   │          ╰── name: 1
 2 │     function A(int _x) {}
   │              ┬     ─┬  
   │              ╰───────── name: 2
   │                     │  
   │                     ╰── name: 3
   │ 
 7 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 4
 8 │     function foo() public {
   │              ─┬─  
   │               ╰─── name: 5
   │
   ├─[ input.sol:1:1 ]
   │
 4 │     constructor(int _x) {}
   │     ─────┬─────  
   │          ╰─────── unresolved
   │ 
 9 │         new A({_x: 2});
   │             ┬  ─┬  
   │             ╰────── ref: 1
   │                 │  
   │                 ╰── ref: 3
───╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract A {
    ┆ ┆   
  5 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │         function A(int _x) {}
    │     ─────────────┬────┬───────  
    │                  ╰────────────── definiens: 2
    │                       │         
    │                       ╰───────── definiens: 3
    │ 
  6 │ ╭─▶ 
    ┆ ┆   
 11 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 4
    │
    ├─[ input.sol:1:1 ]
    │
  8 │ ╭─▶     function foo() public {
    ┆ ┆   
 10 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 5
────╯
